--- a/spring-jsf-1/pom.xml
+++ b/spring-jsf-1/pom.xml
@@ -15,7 +15,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.2.2.RELEASE</version>
-		<!--  <version>1.3.3.RELEASE</version>  -->
+		<!-- <version>1.3.3.RELEASE</version> -->
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
@@ -25,7 +25,7 @@
 	</properties>
 
 	<dependencies>
-		
+
 		<!-- SPRING BOOT STARTER -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -35,23 +35,25 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-aop</artifactId>
 			<scope>compile</scope>
-		</dependency>	
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<!-- <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency> -->
-		
+		<!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-security</artifactId> 
+			</dependency> -->
+
 		<!-- SPRING BOOT STARTER -->
-		
+
 
 		<!-- EMBED TOMCAT -->
 		<dependency>
@@ -69,24 +71,23 @@
 			<artifactId>tomcat-embed-jasper</artifactId>
 			<scope>compile</scope>
 		</dependency>
-		<!-- EMBED TOMCAT -->		
+		<!-- EMBED TOMCAT -->
 
 
 		<!-- JSF SPECIFICATION -->
-        <dependency>
-            <groupId>org.apache.myfaces.core</groupId>
-            <artifactId>myfaces-impl</artifactId>
-            <version>2.2.6</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.myfaces.core</groupId>
-            <artifactId>myfaces-api</artifactId>
-            <version>2.2.6</version>
-            <scope>compile</scope>
-        </dependency>
-		<!-- JSF SPECIFICATION -->	
-		
+		<dependency>
+			<groupId>org.apache.myfaces.core</groupId>
+			<artifactId>myfaces-impl</artifactId>
+			<version>2.2.6</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.myfaces.core</groupId>
+			<artifactId>myfaces-api</artifactId>
+			<version>2.2.6</version>
+			<scope>compile</scope>
+		</dependency>
+		<!-- JSF SPECIFICATION -->
 
 		<!-- PRIME FACES -->
 		<dependency>
@@ -100,7 +101,7 @@
 			<artifactId>all-themes</artifactId>
 			<version>1.0.8</version>
 		</dependency>
-		<!-- PRIME FACES -->			
+		<!-- PRIME FACES -->
 
 
 		<!-- VALIDATION API AND IMPL -->
@@ -114,8 +115,8 @@
 			<version>1.1.0.Final</version>
 		</dependency>
 		<!-- VALIDATION API AND IMPL -->
-		
-				
+
+
 		<!-- DATA BASE -->
 		<dependency>
 			<groupId>mysql</groupId>
@@ -136,8 +137,12 @@
 			<groupId>org.spockframework</groupId>
 			<artifactId>spock-spring</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 	</dependencies>
-		
+
 	<build>
 		<plugins>
 			<plugin>
