--- a/spring-jsf-1/src/main/resources/application.properties
+++ b/spring-jsf-1/src/main/resources/application.properties
@@ -1,6 +1,16 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/springbootdb
-name=Ricardo Maximino
+spring.application.name=Ricardo Maximino
 spring.datasource.username=root
 spring.datasource.password=Ricardo2
-spring.jpa.hibernate.showsql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+
+
+spring.mail.host = smtp.gmail.com
+spring.mail.username = ricardomaximino@gmail.com
+spring.mail.password = Ricardo2
+
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.socketFactory.port = 587
+spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.fallback = false
